# kokila

./: ARCHITECTURE.md  BUILD.md  INSTALL.md  KNOWN_LIMITATIONS.md  PRIVACY.md  README.md  TROUBLESHOOTING.md  build_android.sh  build_espeak.sh  build_onnxruntime.sh  build_sherpa.sh  download_models.ps1  download_models.sh  metadata.json  release.sh  settings.gradle.kts  verify_assets.sh
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model_manifest.json
app/src/main/cpp/: CMakeLists.txt  kokila-tts-jni.cc  sherpa-onnx-stub.cc  sherpa-onnx-wrapper.cc  sherpa-onnx-wrapper.h
app/src/main/java/com/example/: KokilaApplication.kt  KokilaTtsService.kt  MainActivity.kt  NativeTtsEngine.kt
app/src/main/java/com/example/core/audio/: FormantSynthesizer.kt
app/src/main/java/com/example/core/crash/: CrashExporter.kt  CrashLogger.kt
app/src/main/java/com/example/core/download/: ModelDownloadManager.kt
app/src/main/java/com/example/core/model/: ModelIntegrityValidator.kt  ModelManifest.kt  ModelManifestRepository.kt
app/src/main/java/com/example/core/performance/: MemoryMonitor.kt  PerformanceTracker.kt
app/src/main/java/com/example/core/release/: ReleaseValidator.kt
app/src/main/java/com/example/core/runtime/: NativeRuntimeValidator.kt
app/src/main/java/com/example/core/storage/: StorageValidator.kt
app/src/main/java/com/example/data/repository/: DiagnosticsRepository.kt  ModelRepository.kt  SettingsRepository.kt
app/src/main/java/com/example/di/: AppContainer.kt
app/src/main/java/com/example/domain/usecase/: BenchmarkEngineUseCase.kt  ChangeModelUseCase.kt  ExtractAssetsUseCase.kt  StopSpeechUseCase.kt  SynthesizeSpeechUseCase.kt  ValidateModelUseCase.kt
app/src/main/java/com/example/ui/designsystem/: Colors.kt  Elevation.kt  Motion.kt  Shapes.kt  Spacing.kt  Typography.kt  UiThemeManager.kt
app/src/main/java/com/example/ui/screens/: ArchitectureScreen.kt  BenchmarkScreen.kt  ModelsScreen.kt  PipelineScreen.kt  PlaygroundScreen.kt  SettingsScreen.kt  SplashScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/ui/viewmodel/: BenchmarkViewModel.kt  MainViewModel.kt  ModelViewModel.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: tts_engine.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  FallbackAudioQualityTest.kt  GreetingScreenshotTest.kt  ModelValidationTest.kt  NativeRuntimeTest.kt  TtsEngineTest.kt
gradle/: libs.versions.toml
